[tool.poetry]
name = "traversy"
version = "0.1.0"
description = "Fast data traversal & manipulation tools."
license = "MIT"
readme = "README.md"
authors = ["Tom A. <14287229+TensorTom@users.noreply.github.com>"]
homepage = "https://github.com/tensortom/traversy"
repository = "https://github.com/tensortom/traversy"
keywords = ["python", "python3", "traversal", "traverse", "recursive", "iteration", "generator", "dict", "dictionary",
    "data", "mo-dots", "dotty_dict", "iterate", "iterator"]

[tool.poetry.dependencies]
python = "^3.9.0"
mo-dots = "^3.135.20303"
dotty-dict = "^1.3.0"
switch = "^1.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
