[tool.poetry]
name = "traversy"
version = "0.1.2"
description = "Fast data traversal & manipulation tools."
license = "MIT"
readme = "README.md"
authors = ["Tom A. <14287229+TensorTom@users.noreply.github.com>"]
homepage = "https://github.com/tensortom/traversy"
repository = "https://github.com/tensortom/traversy"
keywords = ["python", "python3", "traversal", "traverse", "recursive", "iteration", "generator", "dict", "dictionary",
    "data", "mo-dots", "dotty_dict", "iterate", "iterator"]

[tool.poetry.dependencies]
python = "*"
mo-dots = ">=3.135.20303"
dotty-dict = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
