[tool.poetry]
name = "traversy"
version = "0.1.4"
description = "Fast data traversal & manipulation tools."
license = "MIT"
readme = "README.md"
authors = ["Tom A. <14287229+TensorTom@users.noreply.github.com>"]
homepage = "https://github.com/tensortom/traversy"
repository = "https://github.com/tensortom/traversy"
documentation = "https://tensortom.github.io/traversy/"
keywords = ["python", "python3", "traversal", "traverse", "recursive", "iteration", "generator", "dict", "dictionary",
    "data", "mo-dots", "dotty_dict", "iterate", "iterator"]

[tool.poetry.dependencies]
python = ">=3.6,<4.0.0"
mo-dots = ">=3.135.20303"
dotty-dict = ">=1.3.0"
datafunc = ">=0.0.4"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
mkdocs-material = "^6.1.5"
mkdocstrings = "^0.13.6"
pydoc-markdown = "^3.8.0"
dephell = "^0.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
